# server-stack-monorepo-v2

./: .agent-goal.md  .gitignore  5K-Tracker-PWA-v2.code-workspace  COC_BONUS_HISTORY_COMPLETE_REPORT.md  COC_DATABASE_ANALYSIS_REPORT.md  COC_DATABASE_DASHBOARD.md  COC_DATABASE_DETAILED_ANALYSIS.md  DASHBOARD_INTERACTIVE_IMPROVEMENTS_2025-08-14.md  IOS_HEALTHKIT_BRIDGE_ARCHIVE_2025-08-14.md  PWA_ENHANCEMENT_SUMMARY_2025-08-14.md  PWA_UI_IMPROVEMENTS_2025-08-14.md  PWA_WORKOUT_NEXT_STEPS.md  RESTORE_COMMANDS.md  WORKING_APP_BACKUP_app.py  WORKING_VERSION_BACKUP_2025-08-07.md  WORKING_VERSION_BACKUP_2025-08-08_08-47-47.md  YANCY.code-workspace  cleanup-scripts.sh  cocstack_dump.sql  cocstack_dump_backup_2025-08-05.sql  cookies.txt  copilot-chat-history.md  cruise_config.json  cruise_prices.db  force-rebuild-dashboard.sh  test_bot.py
qsl-auto-v2/: .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  README.md  docker-compose.syncthing.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
qsl-auto-v2/app/: __init__.py  cli.py  config.py
qsl-auto-v2/app/email/: __init__.py  gmail_client.py
qsl-auto-v2/app/ingest/: __init__.py  connector_client.py  models.py
qsl-auto-v2/app/render/: __init__.py  renderer.py
qsl-auto-v2/app/storage/: state.py
qsl-auto-v2/app/sync/: __init__.py  syncer.py
qsl-auto-v2/connector/: Dockerfile  main.py  requirements.txt
qsl-auto-v2/docs/: DEPLOY_CONNECTOR_REMOTE.md  MIGRATION_NOTES.md  README.md  SEQUENCE_DIAGRAM.md
qsl-auto-v2/tests/: conftest.py  test_models.py  test_renderer.py  test_smoke.py  test_state.py
(+495 files in other folders)
