[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsl-auto-v2"
version = "0.1.0"
description = "Automated QSL postcard generator and mailer"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
